# IC-NoteTaking-dApp

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
src/NoteTakingdApp_backend/: Cargo.toml  NoteTakingdApp_backend.did
src/NoteTakingdApp_backend/src/: lib.rs
src/NoteTakingdApp_frontend/: package.json
src/NoteTakingdApp_frontend/src/: App.jsx  actor.js
