[package]
name = "NoteTakingdApp_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.17.0"
candid = "0.10.4"
serde = { version = "1.0", features = ["derive"] }
ic-stable-structures = "0.5.4"
icrc-ledger-types = "0.1.1" 
num-traits = "0.2"
