[package]
name = "NoteTakingdApp_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-stable-structures = "0.5.4"
icrc-ledger-types = "0.1.5" 
num-traits = "0.2"
candid = "0.10.14"
ic-cdk = "0.18.3"
serde = "1.0.219"
serde_json = "1.0"
hex = "0.4"
[patch.crates-io]
tiny-keccak = { version = "2.0", features = ["sha3"] }
rlp = "0.5"
evm_rpc = { version = "0.2" } # Replace with the correct version